// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros ClassProperty (array): ClassProperty (array) 1`] = `

import { options } from '../babel.macro';

class FooComponent extends Template {
    @options errors = [ 'errors must be overriden' ];
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { configureOptions } from 'sham-ui';


class FooComponent extends Template {
    configureOptions() {
        super.configureOptions(...arguments);
        configureOptions(FooComponent.prototype, this, {
            errors: ['errors must be overriden']
        });
    }

}

`;

exports[`macros ClassProperty: ClassProperty 1`] = `

import { options } from '../babel.macro';

class FooComponent extends Template {
    @options text = 'default text';
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { configureOptions } from 'sham-ui';


class FooComponent extends Template {
    configureOptions() {
        super.configureOptions(...arguments);
        configureOptions(FooComponent.prototype, this, {
            text: 'default text'
        });
    }

}

`;

exports[`macros add to existed method: add to existed method 1`] = `

import { configureOptions } from 'sham-ui';
import { options } from '../babel.macro';

class FooComponent extends Template {
    @options errors = [ 'errors must be overriden' ];

    configureOptions() {
        super.configureOptions(...arguments);
        configureOptions(FooComponent.prototype, this, {
            startDate: {
                get() {
                    return new Date();
                }

            }
        });
    }
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { configureOptions } from 'sham-ui';


class FooComponent extends Template {

    configureOptions() {
        super.configureOptions(...arguments);
        configureOptions(FooComponent.prototype, this, {
            startDate: {
                get() {
                    return new Date();
                }

            },
            errors: ['errors must be overriden']
        });
    }
}

`;

exports[`macros already has configureOptions: already has configureOptions 1`] = `

import { options } from '../babel.macro';

class FooComponent extends Template {
    @options get startDate() {
        return new Date();
    }
    
    configureOptions() {
        super.configureOptions( ...arguments ); 
    }
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { configureOptions } from 'sham-ui';


class FooComponent extends Template {

    configureOptions() {
        super.configureOptions(...arguments);
        configureOptions(FooComponent.prototype, this, {
            startDate: {
                get() {
                    return new Date();
                }

            }
        });
    }
}

`;

exports[`macros complex (from doc): complex (from doc) 1`] = `

import { options } from '../babel.macro';

class FooComponent extends Template {
    @options submitText = 'Submit';
    @options loaded = false;
    @options errors = [];
    @options get startDate() {
        return new Date();
    }
    @options data = {};
    @options onLoad() {};
    
    @options get text() {
        return this._text;
    }
    @options set text( value ) {
        this._text = value;
    }
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { configureOptions } from 'sham-ui';


class FooComponent extends Template {
    configureOptions() {
        super.configureOptions(...arguments);
        configureOptions(FooComponent.prototype, this, {
            submitText: 'Submit',
            loaded: false,
            errors: [],
            startDate: {
                get() {
                    return new Date();
                }

            },
            data: {},

            onLoad() {},

            text: {
                get() {
                    return this._text;
                },

                set(value) {
                    this._text = value;
                }

            }
        });
    }

}

`;

exports[`macros getter & setter: getter & setter 1`] = `

import { options } from '../babel.macro';

class FooComponent extends Template {
    @options get text() {
        return this._text;
    }
    @options set text( value ) {
        this._text = value;
    }
    
    @options get date() {
        return this._date;
    }
    @options set date( value ) {
        this._date = value;
    }
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { configureOptions } from 'sham-ui';


class FooComponent extends Template {
    configureOptions() {
        super.configureOptions(...arguments);
        configureOptions(FooComponent.prototype, this, {
            text: {
                get() {
                    return this._text;
                },

                set(value) {
                    this._text = value;
                }

            },
            date: {
                get() {
                    return this._date;
                },

                set(value) {
                    this._date = value;
                }

            }
        });
    }

}

`;

exports[`macros getter: getter 1`] = `

import { options } from '../babel.macro';

class FooComponent extends Template {
    @options get startDate() {
        return new Date();
    }
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { configureOptions } from 'sham-ui';


class FooComponent extends Template {
    configureOptions() {
        super.configureOptions(...arguments);
        configureOptions(FooComponent.prototype, this, {
            startDate: {
                get() {
                    return new Date();
                }

            }
        });
    }

}

`;

exports[`macros method: method 1`] = `

import { options } from '../babel.macro';

class FooComponent extends Template {
    @options text() {
        return this.ID;
    }
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { configureOptions } from 'sham-ui';


class FooComponent extends Template {
    configureOptions() {
        super.configureOptions(...arguments);
        configureOptions(FooComponent.prototype, this, {
            text() {
                return this.ID;
            }

        });
    }

}

`;
